
= rufus-lua CHANGELOG.txt


== rufus-lua - 1.1.3    not yet released


== rufus-lua - 1.1.2    released 2014/09/13

- properly turn Ruby nils into Lua nils (Christopher Saunders)
- get rid of Lib.strlen (as suggested by Stas Ukolov)
- let Ruby callbacks accept Lua functions as arguments (Gian Perrone)
- add #set_error_handler (based on an initial request by Nathanael Jones)
- fix unstack issue when returning table (https://github.com/lywaterman)
- use "{filename}:#{lineno}" as eval chunk name (suggested by Nathanael Jones)
- wrap Ruby callbacks in CallbackState (Nathanael Jones)
- accept Ruby symbols containing \0 character (Nathanael Jones)


== rufus-lua - 1.1.1    released 2014/07/01

- move from bacon to rspec
- remove double VERSION (Nathanael Jones - https://github.com/nathanaeljones)
- load only one Lua lib (Thanks Nathanael)
- add Rufus::Lua::Lib.path to learn which Lua lib got loaded (idea Nathanael)
- set `ffi_lib_flags(:lazy, :global)` before loading Lua (thanks Nathanael)
- fix panic error when creating new Rufus::Lua::State with specific
  list of lib to load (fix by Matthew Nielsen - https://github.com/xunker)
- read back Lua strings containing \0 bytes (thanks Nathanael Jones)
- let Ruby strings containing \0 bytes go to the Lua side freely (thanks NJ)
- enhanced Rufus::Lua::LuaError by adding filename and lineno - based on
  a suggestion by Nathanael Jones)
- enhanced Rufus::Lua::State#eval by adding optional 'filename' and 'lineno'
  arguments (like Kernel.eval) (hint by Nathanael Jones)


== rufus-lua - 1.1.0    released 2009/09/30

- todo      : Ruby symbols are passed to Lua as strings (Scott)
- todo      : implemented State#function :to_ruby option
- todo      : implemented Table#to_ruby
- todo      : added 'pure' option to Table#to_a
- issue     : added State@callbacks array to preserve callback from GC (Scott)
- issue     : passing tables to ruby functions wrecked arg list. Fixed.